fixed form width on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -40,17 +40,28 @@ footer {
     color: black;
 }
 
+
+/*Form in footer*/
 .container-fluid {
     display: inline-block;
-    position: relative; 
+    position: relative;
+    max-width: 50%; 
 }
 
+@media only screen and (max-width: 700px) {
+    .container-fluid {
+        max-width: 80%;
+    }
+  }
+
+/*Three rotating images in carousel*/
 .container-fluid .carousel-item img {
     display: block;
     max-width: 100%;
     max-height: 600px;
  }
 
+ /*My work - projects, codes, functions */
 .container-fluid .row img {
     max-width: 100%;
 }
@@ -92,6 +103,16 @@ footer {
 #generate {
     font-size: 12px;
 }
+
+@media only screen and (max-width: 700px) {
+    .outer-container {
+        height: 250px;
+        display: grid;
+        margin: auto;
+        align-content: center;
+    }
+  }
+
 
 /*About Me, Education, Skills*/
 .col-3, .col-4 {
@@ -138,6 +159,19 @@ footer {
     float: right;
     position: fixed;
 }
+
+@media only screen and (min-width: 992px) {
+    .navbar {
+      flex-direction: column;
+    }
+  }
+
+@media only screen and (min-width: 992px) {
+    .navbar .nav-item {
+      padding: 0.5em 1em;
+    }
+  }
+
 
 /*Resume popup*/
 .modal {
@@ -229,27 +263,6 @@ a:hover {
     font-size: 15px;
     font-weight: bold;
 }
-
-@media only screen and (min-width: 992px) {
-    .navbar {
-      flex-direction: column;
-    }
-  }
-
-@media only screen and (min-width: 992px) {
-    .navbar .nav-item {
-      padding: 0.5em 1em;
-    }
-  }
-
-  @media only screen and (max-width: 700px) {
-    .outer-container {
-        height: 250px;
-        display: grid;
-        margin: auto;
-        align-content: center;
-    }
-  }
 
 /*Weather App*/
 .container {
